--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
     "react": "^18.2.0",
+    "react-datocms": "^4.0.9",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-leaflet": "^4.2.1",
     "sass": "^1.59.2"
   }
 }
