--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.0.7",
     "gatsby": "^5.7.0",
     "gatsby-link": "^5.8.0",
     "gatsby-plugin-image": "^3.7.0",
@@ -23,6 +24,7 @@
     "gatsby-plugin-sass": "^6.7.0",
     "gatsby-plugin-sharp": "^5.7.0",
     "gatsby-plugin-sitemap": "^6.8.0",
+    "gatsby-plugin-styled-components": "^6.8.0",
     "gatsby-source-datocms": "^5.0.4",
     "gatsby-source-filesystem": "^5.7.0",
     "gatsby-transformer-sharp": "^5.7.0",
@@ -30,6 +32,7 @@
     "react-datocms": "^4.0.9",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.5",
-    "sass": "^1.59.2"
+    "sass": "^1.59.2",
+    "styled-components": "^5.3.9"
   }
 }
